src/js/myt/component/ExpressionParser.js
/* eslint-disable */
myt.ExpressionParser = (() => {
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/
class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    start: peg$parsestart,
  };
  let peg$startRuleFunction = peg$parsestart;

  const peg$c0 = "false";
  const peg$c1 = "true";
  const peg$c2 = "null";
  const peg$c3 = "this";
  const peg$c4 = ".";
  const peg$c5 = "0";
  const peg$c6 = "\"";
  const peg$c7 = "'";
  const peg$c8 = "\\";
  const peg$c9 = "(";
  const peg$c10 = ")";
  const peg$c11 = "[";
  const peg$c12 = "]";
  const peg$c13 = ",";
  const peg$c14 = "{";
  const peg$c15 = "}";
  const peg$c16 = ":";
  const peg$c17 = "=>";
  const peg$c18 = "?.";
  const peg$c19 = "+";
  const peg$c20 = "-";
  const peg$c21 = "!";
  const peg$c22 = "<=";
  const peg$c23 = ">=";
  const peg$c24 = "===";
  const peg$c25 = "!==";
  const peg$c26 = "==";
  const peg$c27 = "!=";
  const peg$c28 = "&&";
  const peg$c29 = "||";
  const peg$c30 = "?";

  const peg$r0 = /^[     ]/;
  const peg$r1 = /^[_a-zA-Z]/;
  const peg$r2 = /^[0-9A-Z_a-z]/;
  const peg$r3 = /^[1-9]/;
  const peg$r4 = /^[0-9]/;
  const peg$r5 = /^["\\]/;
  const peg$r6 = /^['\\]/;
  const peg$r7 = /^['"\\rn]/;
  const peg$r8 = /^[%*\/]/;
  const peg$r9 = /^[+\-]/;
  const peg$r10 = /^[<>]/;

  const peg$e0 = peg$classExpectation(["    ", " "], false, false, false);
  const peg$e1 = peg$otherExpectation("identifier");
  const peg$e2 = peg$classExpectation(["_", ["a", "z"], ["A", "Z"]], false, false, false);
  const peg$e3 = peg$classExpectation([["0", "9"], ["A", "Z"], "_", ["a", "z"]], false, false, false);
  const peg$e4 = peg$literalExpectation("false", false);
  const peg$e5 = peg$literalExpectation("true", false);
  const peg$e6 = peg$literalExpectation("null", false);
  const peg$e7 = peg$literalExpectation("this", false);
  const peg$e8 = peg$otherExpectation("number");
  const peg$e9 = peg$literalExpectation(".", false);
  const peg$e10 = peg$literalExpectation("0", false);
  const peg$e11 = peg$classExpectation([["1", "9"]], false, false, false);
  const peg$e12 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e13 = peg$otherExpectation("string");
  const peg$e14 = peg$literalExpectation("\"", false);
  const peg$e15 = peg$literalExpectation("'", false);
  const peg$e16 = peg$classExpectation(["\"", "\\"], false, false, false);
  const peg$e17 = peg$anyExpectation();
  const peg$e18 = peg$literalExpectation("\\", false);
  const peg$e19 = peg$classExpectation(["'", "\\"], false, false, false);
  const peg$e20 = peg$classExpectation(["'", "\"", "\\", "r", "n"], false, false, false);
  const peg$e21 = peg$literalExpectation("(", false);
  const peg$e22 = peg$literalExpectation(")", false);
  const peg$e23 = peg$literalExpectation("[", false);
  const peg$e24 = peg$literalExpectation("]", false);
  const peg$e25 = peg$literalExpectation(",", false);
  const peg$e26 = peg$literalExpectation("{", false);
  const peg$e27 = peg$literalExpectation("}", false);
  const peg$e28 = peg$literalExpectation(":", false);
  const peg$e29 = peg$literalExpectation("=>", false);
  const peg$e30 = peg$literalExpectation("?.", false);
  const peg$e31 = peg$literalExpectation("+", false);
  const peg$e32 = peg$literalExpectation("-", false);
  const peg$e33 = peg$literalExpectation("!", false);
  const peg$e34 = peg$classExpectation(["%", "*", "/"], false, false, false);
  const peg$e35 = peg$classExpectation(["+", "-"], false, false, false);
  const peg$e36 = peg$literalExpectation("<=", false);
  const peg$e37 = peg$literalExpectation(">=", false);
  const peg$e38 = peg$classExpectation(["<", ">"], false, false, false);
  const peg$e39 = peg$literalExpectation("===", false);
  const peg$e40 = peg$literalExpectation("!==", false);
  const peg$e41 = peg$literalExpectation("==", false);
  const peg$e42 = peg$literalExpectation("!=", false);
  const peg$e43 = peg$literalExpectation("&&", false);
  const peg$e44 = peg$literalExpectation("||", false);
  const peg$e45 = peg$literalExpectation("?", false);

  function peg$f0(exp) {return exp;  }
  function peg$f1(name) {return name;  }
  function peg$f2(start, parts) {return start + parts.join("");  }
  function peg$f3(literal) {return literal;  }
  function peg$f4(parts) {return parseFloat(parts.join(""));  }
  function peg$f5(parts) {return parseFloat(parts.join(""));  }
  function peg$f6(parts) {return parseFloat(parts);  }
  function peg$f7() {return "0";  }
  function peg$f8(first, rest) {return first + (rest !== null ? rest : "");  }
  function peg$f9(parts) {return parts.join("");  }
  function peg$f10(parts) {return parts[1].join("");  }
  function peg$f11(char_) {return char_;  }
  function peg$f12(sequence) {return sequence;  }
  function peg$f13(char_) {return char_;  }
  function peg$f14(sequence) {return sequence;  }
  function peg$f15(char_) {
    switch (char_) {
        case "r": return "\r";
        case "n": return "\n";
        default: return char_;
    }
  }
  function peg$f16(char_) {return char_;  }
  function peg$f17() {return {type:"This"};  }
  function peg$f18(name) {return {type:"Variable", name:name};  }
  function peg$f19() {return {type:"NullLiteral"};  }
  function peg$f20() {return {type:"BooleanLiteral", value:true};  }
  function peg$f21() {return {type:"BooleanLiteral", value:false};  }
  function peg$f22(value) {return {type:"NumericLiteral", value:value};  }
  function peg$f23(value) {return {type:"StringLiteral", value:value};  }
  function peg$f24(value) {return {type:"ArrayLiteral", value:value};  }
  function peg$f25(value) {return {type:"ObjectLiteral", value:value};  }
  function peg$f26(exp) {return exp;  }
  function peg$f27(elision) {return {type:"ArrayExpression", elements:optionalList(extractOptional(elision, 0))};  }
  function peg$f28(elements) {return {type:"ArrayExpression", elements:elements};  }
  function peg$f29(elements, elision) {return {type:"ArrayExpression", elements:elements.concat(optionalList(extractOptional(elision, 0)))};  }
  function peg$f30(elision, element) {return optionalList(extractOptional(elision, 0)).concat(element);  }
  function peg$f31(head, elision, element) {return optionalList(extractOptional(elision, 0)).concat(element);  }
  function peg$f32(head, tail) {return Array.prototype.concat.apply(head, tail);  }
  function peg$f33(commas) {return filledArray(commas.length + 1, null);  }
  function peg$f34() {return {type:"ObjectExpression", properties:[]};  }
  function peg$f35(properties) {return {type:"ObjectExpression", properties:properties};  }
  function peg$f36(properties) {return {type:"ObjectExpression", properties:properties};  }
  function peg$f37(head, tail) {return buildList(head, tail, 3);  }
  function peg$f38(key, value) {return {type:"Property", key:key, value:value};  }
  function peg$f39(params, body) {return {type:"ArrowFunction", params:params, body:body};  }
  function peg$f40(param) {return [param];  }
  function peg$f41() {return [];  }
  function peg$f42(list) {return list;  }
  function peg$f43(head, tail) {return [head].concat(tail.map(t => t[3]));  }
  function peg$f44(base, name) {return name;  }
  function peg$f45(base, name) {return name;  }
  function peg$f46(base, name) {return name;  }
  function peg$f47(base, name) {return name;  }
  function peg$f48(base, accessors) {
    let result = base;
    for (let i = 0; accessors.length > i; i++) {
        result = {
            type:"PropertyAccess",
            base:result,
            name:accessors[i]
        };
    }
    return result;
  }
  function peg$f49(args) {
    return args !== "" ? args : [];
  }
  function peg$f50(head, tail) {
    const result = [head];
    for (let i = 0; tail.length > i; i++) result.push(tail[i][3]);
    return result;
  }
  function peg$f51(base, args) {return {type:"FunctionCall", arguments:args};  }
  function peg$f52(base, args) {return {type:"FunctionCall", arguments:args};  }
  function peg$f53(base, name) {return {type:"PropertyAccessProperty", name:name};  }
  function peg$f54(base, name) {return {type:"PropertyAccessProperty", name:name};  }
  function peg$f55(base, name) {return {type:"PropertyAccessProperty", name:name};  }
  function peg$f56(base, name) {return {type:"PropertyAccessProperty", name:name};  }
  function peg$f57(base, argumentsOrAccessors) {
    let result = base;
    for (let part of argumentsOrAccessors) {
        if (part.type === "FunctionCall") {
            result = {
                type:"FunctionCall",
                name:result,
                arguments:part.arguments
            };
        } else if (part.type === "PropertyAccessProperty") {
            result = {
                type:"PropertyAccess",
                base:result,
                name:part.name
            };
        }
    }
    return result;
  }
  function peg$f58(op, exp) {
    return {
        type: "UnaryExp",
        op:   op.join ? op[0] : op,
        exp:  exp
    };
  }
  function peg$f59(head, tail) {
    let result = head;
    for (let i = 0; tail.length > i; i++) {
        result = {
            type:  "BinaryExp",
            op:    tail[i][1],
            left:  result,
            right: tail[i][3]
        };
    }
    return result;
  }
  function peg$f60(head, tail) {
    let result = head;
    for (let i = 0; tail.length > i; i++) {
        result = {
            type:  "BinaryExp",
            op:    tail[i][1],
            left:  result,
            right: tail[i][3]
        };
    }
    return result;
  }
  function peg$f61(head, tail) {
    let result = head;
    for (let i = 0; tail.length > i; i++) {
        result = {
            type:  "BinaryExp",
            op:    tail[i][1],
            left:  result,
            right: tail[i][3]
        };
    }
    return result;
  }
  function peg$f62(head, tail) {
    let result = head;
    for (let i = 0; tail.length > i; i++) {
        result = {
            type:  "BinaryExp",
            op:    tail[i][1],
            left:  result,
            right: tail[i][3]
        };
    }
    return result;
  }
  function peg$f63(head, tail) {
    let result = head;
    for (let i = 0; tail.length > i; i++) {
        result = {
            type:  "BinaryExp",
            op:    "&&",
            left:  result,
            right: tail[i][3]
        };
    }
    return result;
  }
  function peg$f64(head, tail) {
    let result = head;
    for (let i = 0; tail.length > i; i++) {
        result = {
            type:  "BinaryExp",
            op:    "||",
            left:  result,
            right: tail[i][3]
        };
    }
    return result;
  }
  function peg$f65(condition, trueExp, falseExp) {
    return {
          type:      "ConditionalExp",
          condition: condition,
          trueExp:   trueExp,
          falseExp:  falseExp
    };
  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseConditionalExp();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f0(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parse_() {
    let s0, s1;

    s0 = [];
    s1 = input.charAt(peg$currPos);
    if (peg$r0.test(s1)) {
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = input.charAt(peg$currPos);
      if (peg$r0.test(s1)) {
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
    }

    return s0;
  }

  function peg$parseIdentifier() {
    let s0, s1, s2;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$currPos;
    peg$silentFails++;
    s2 = peg$parseReservedWord();
    peg$silentFails--;
    if (s2 === peg$FAILED) {
      s1 = undefined;
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseIdentifierName();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f1(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }

    return s0;
  }

  function peg$parseIdentifierName() {
    let s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseIdentifierStart();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseIdentifierPart();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseIdentifierPart();
      }
      peg$savedPos = s0;
      s0 = peg$f2(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }

    return s0;
  }

  function peg$parseIdentifierStart() {
    let s0;

    s0 = input.charAt(peg$currPos);
    if (peg$r1.test(s0)) {
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }

    return s0;
  }

  function peg$parseIdentifierPart() {
    let s0;

    s0 = input.charAt(peg$currPos);
    if (peg$r2.test(s0)) {
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }

    return s0;
  }

  function peg$parseFalseToken() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      peg$silentFails++;
      s3 = peg$parseIdentifierPart();
      peg$silentFails--;
      if (s3 === peg$FAILED) {
        s2 = undefined;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s1 = [s1, s2];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTrueToken() {
    let s0, s1, s2, s3;
